added service and failures section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,90 @@
       </section>
     </header>
 
-    <main></main>
+    <main>
+      <!-- services section -->
+      <section class="services">
+        <h3 class="services-title">Services</h3>
+        <div class="service-container">
+          <div class="service">
+            <img
+              class="service-img"
+              src="./images/icons/feature_icon_1.png"
+              alt=""
+            />
+            <h4 class="service-title">Manage Your Workflow</h4>
+            <p class="service-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore dolore magna aliqua.
+            </p>
+            <button class="service-btn">See more</button>
+          </div>
+          <div class="service">
+            <img
+              class="service-img"
+              src="./images/icons/feature_icon_2.png"
+              alt=""
+            />
+            <h4 class="service-title">Analytics & Insights</h4>
+            <p class="service-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore dolore magna aliqua.
+            </p>
+            <button class="service-btn">See more</button>
+          </div>
+          <div class="service">
+            <img
+              class="service-img"
+              src="./images/icons/feature_icon_3.png"
+              alt=""
+            />
+            <h4 class="service-title">Organize Your Deadlines</h4>
+            <p class="service-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore dolore magna aliqua.
+            </p>
+            <button class="service-btn">See more</button>
+          </div>
+        </div>
+      </section>
+
+      <!-- failures section -->
+      <section class="failures">
+        <div class="failures-img">
+          <img class="failure-img" src="./images/person.png" alt="" />
+        </div>
+
+        <div class="failures-text">
+          <h3 class="section-title">
+            My failures of <br />
+            previous year
+          </h3>
+          <p class="section-description">
+            Contrary to popular belief, Lorem Ipsum is not simply random text.
+            It has roots in a piece of classical Latin literature from 45 BC,
+            making it over 2000 years old. Richard McClintock.
+          </p>
+          <p class="failures-description">
+            <i class="fa-solid fa-check"></i> Contrary to popular belief, is not
+            simply.
+          </p>
+          <p class="failures-description">
+            <i class="fa-solid fa-check"></i> Contrary to popular belief.
+          </p>
+          <p class="failures-description">
+            <i class="fa-solid fa-check"></i> Contrary to popular , is not
+            simply.
+          </p>
+          <p class="failures-description">
+            <i class="fa-solid fa-check"></i> Contrary to popular belief, is not
+            simply.
+          </p>
+          <p class="failures-description">
+            <i class="fa-solid fa-check"></i> Contrary to popular simply.
+          </p>
+        </div>
+      </section>
+    </main>
 
     <footer></footer>
   </body>
