--- a/index.html
+++ b/index.html
@@ -123,6 +123,42 @@
           </p>
         </div>
       </section>
+
+      <!-- plan section -->
+      <section class="my-plan">
+        <h3 class="section-title">My Plan</h3>
+        <div class="plan-container">
+          <div class="plan">
+            <img src="./images/icons/web.png" alt="" />
+            <h3 class="plan-title">Web Development</h3>
+            <p class="plan-description">I want to start</p>
+          </div>
+          <div class="plan">
+            <img src="./images/icons/js.png" alt="" />
+            <h3 class="plan-title">Javascript</h3>
+            <p class="plan-description">I want to learn</p>
+          </div>
+          <div class="plan">
+            <img src="./images/icons/smoke.png" alt="" />
+            <h3 class="plan-title">Smoking Habit</h3>
+            <p class="plan-description">I want to end</p>
+          </div>
+          <div class="plan">
+            <img src="./images/icons/ecom.png" alt="" />
+            <h3 class="plan-title">ecommerce</h3>
+            <p class="plan-description">I want to develop</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- call section -->
+      <section class="call">
+        <h3 class="call-title">
+          Awlays keep a positive <br />
+          mindset
+        </h3>
+        <button class="primary-btn">Call Now</button>
+      </section>
     </main>
 
     <footer></footer>
