added footer and all okk

--- a/index.html
+++ b/index.html
@@ -161,6 +161,37 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <!-- footer section -->
+      <section class="footer">
+        <div class="future">
+          <h3 class="future-title">Future</h3>
+          <p class="future-description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words
+          </p>
+          <p class="future-description">Email : mdsajedstudent@gmail.com</p>
+          <p class="future-description">Phone : 01744265270</p>
+          <div class="social-icon">
+            <img src="./images/icons/fb.png" alt="" />
+            <img src="./images/icons/twitter.png" alt="" />
+            <img src="./images/icons/youtube.png" alt="" />
+          </div>
+        </div>
+
+        <div class="subscribe">
+          <h3 class="subscribe-title">Subscribe</h3>
+          <input
+            class="input"
+            type="Email"
+            name=""
+            id=""
+            placeholder="Enter your email"
+          />
+          <button class="primary-btn subscribe-btn">Subscribe</button>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
